# cinebaianos-bot

./: .env.example  .gitignore  README.md  bot.py  db.py  pyproject.toml  requirements.txt  sheets.py  sincronizar_filmes.py  tmdb.py
docker/: Dockerfile
src/bot/: api_client.py  bot.py  config.py  sincronizar_filmes.py  tmdb.py
src/bot/cogs/: admin.py  filmes.py  generos.py  geral.py  links.py  rankings.py  sincronizacao.py  slash.py  usuarios.py  votos.py
src/bot/db/: db.py
src/bot/di/: connection_factory.py  maintenance_factory.py  repository_factory.py  schemas_factory.py
src/bot/domain/providers/: connection_provider.py
src/bot/domain/repositories/: filmes_repository.py  generos_repository.py  maintenance_repository.py  schemas_repository.py  usuarios_repository.py  votos_repository.py
src/bot/exception/: api_error.py
src/bot/handlers/: error_handler.py
src/bot/infra/sqlite/: connection.py  filmes_repository_sqlite.py  generos_repository_sqlite.py  maintenance_repository_sqlite.py  schema_repository_sqlite.py  sqlite_connection_provider.py  usuarios_repository_sqlite.py  votos_repository_sqlite.py
src/bot/maintenance/: manage_db.py
src/bot/sheets/: sheets.py
src/bot/utils/: date_utils.py  embed_utils.py  error_utils.py  permissions.py
